fix scaling for squished windows

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -297,3 +297,17 @@ body:has(dialog[open]) {
     border-radius: 20px;
     border: 2px solid black;
 }
+
+/* fix scaling for squished windows */
+
+@media (min-width: 640px) and (max-height: 700px) {
+    html {
+        font-size: 13px;
+    }
+}
+
+@media (min-width: 640px) and (max-height: 550px) {
+    html {
+        font-size: 11px;
+    }
+}
